# MigrationTool

./: README.md
Client/: README.rst  setup.cfg
Client/MigrationToolClient/: base.py  client.py  constants.py  exceptions.py  version.py
Client/MigrationToolClient/cli/: endpoint_instances.py  endpoints.py  migrations.py  replica_executions.py  replicas.py  shell.py
Client/MigrationToolClient/v1/: common.py  endpoint_instances.py  endpoints.py  migrations.py  replica_executions.py  replicas.py
Server/: setup.cfg
Server/MigrationTool/: exception.py  i18n.py  keystone.py  rpc.py  secrets.py  service.py  utils.py  wsman.py
Server/MigrationTool/api/: __init__.py  wsgi.py
Server/MigrationTool/api/middleware/: auth.py  fault.py
Server/MigrationTool/api/v1/: migration_actions.py  migrations.py  router.py
Server/MigrationTool/cmd/: api.py  conductor.py  db_sync.py  worker.py
Server/MigrationTool/conductor/rpc/: client.py  server.py
Server/MigrationTool/db/: api.py
Server/MigrationTool/db/sqlalchemy/: api.py  models.py
Server/MigrationTool/db/sqlalchemy/migrate_repo/: migrate.cfg
Server/MigrationTool/migrations/: api.py
Server/MigrationTool/osmorphing/: base.py  debian.py  factory.py  manager.py  oracle.py  redhat.py  suse.py  ubuntu.py  windows.py
Server/MigrationTool/osmorphing/osmount/: base.py  factory.py  ubuntu.py  windows.py
Server/MigrationTool/providers/: base.py  factory.py
Server/MigrationTool/providers/openstack/: __init__.py
Server/MigrationTool/providers/vmware_vsphere/: __init__.py  guestid.py
Server/MigrationTool/worker/rpc/: client.py  server.py
Server/debian/etc/init/: MigrationTool-api.conf  MigrationTool-conductor.conf  MigrationTool-worker.conf
Server/etc/coriolis/: MigrationTool.conf  api-paste.ini
