[metadata]
name = python-MigrationToolClient
summary = MigrationTool Command-line Client
description-file =
    README.rst
author = Omer Hamad
author-email = ohamad@stcs.com.sa
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Environment :: Console

[files]
packages =
    MigrationToolClient

[entry_points]
console_scripts =
    MigrationTool= MigrationToolClient.cli.shell:main

coriolis.v1 =
    endpoint_create = MigrationToolClient.cli.endpoints:CreateEndpoint
    endpoint_delete = MigrationToolClient.cli.endpoints:DeleteEndpoint
    endpoint_list = MigrationToolClient.cli.endpoints:ListEndpoint
    endpoint_show = MigrationToolClient.cli.endpoints:ShowEndpoint
    endpoint_validate_connection = MigrationToolClient.cli.endpoints:EndpointValidateConnection

    endpoint_instance_list = MigrationToolClient.cli.endpoint_instances:ListEndpointInstance

    migration_cancel = MigrationToolClient.cli.migrations:CancelMigration
    migration_create = MigrationToolClient.cli.migrations:CreateMigration
    migration_deploy_replica = MigrationToolClient.cli.migrations:CreateMigrationFromReplica
    migration_delete = MigrationToolClient.cli.migrations:DeleteMigration
    migration_list = MigrationToolClient.cli.migrations:ListMigration
    migration_show = MigrationToolClient.cli.migrations:ShowMigration

    replica_create = MigrationToolClient.cli.replicas:CreateReplica
    replica_delete = MigrationToolClient.cli.replicas:DeleteReplica
    replica_disks_delete = MigrationToolClient.cli.replicas:DeleteReplicaDisks
    replica_list = MigrationToolClient.cli.replicas:ListReplica
    replica_show = MigrationToolClient.cli.replicas:ShowReplica

    replica_execution_cancel = MigrationToolClient.cli.replica_executions:CancelReplicaExecution
    replica_execute = MigrationToolClient.cli.replica_executions:CreateReplicaExecution
    replica_execution_delete = MigrationToolClient.cli.replica_executions:DeleteReplicaExecution
    replica_execution_list = MigrationToolClient.cli.replica_executions:ListReplicaExecution
    replica_execution_show = MigrationToolClient.cli.replica_executions:ShowReplicaExecution


[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[wheel]
universal = 1
