[metadata]
name = MigrationTool
summary = Migration as a Service
description-file =
    README.rst

classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    MigrationTool

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    MigrationTool-api = MigrationTool.cmd.api:main
    MigrationTool-conductor = MigrationTool.cmd.conductor:main
    MigrationTool-worker = MigrationTool.cmd.worker:main

[wheel]
universal = 1
